--- a/html/CreerAnnonceCherche1.html
+++ b/html/CreerAnnonceCherche1.html
@@ -10,6 +10,10 @@
     <img src="http://www2.unine.ch/files/content/sites/spd/files/shared/basic_pos_internet.jpg" alt="logo UniNE" align="right"/>
   
  </head>
+ 
+ <header>
+ 	<p> Bla bla test </p>	
+ </header>
 
 <body>
     
