--- a/html/CreerAnnonceOffre1.html
+++ b/html/CreerAnnonceOffre1.html
@@ -7,6 +7,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/annonce.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
         <img src="http://www2.unine.ch/files/content/sites/spd/files/shared/basic_pos_internet.jpg" alt="logo UniNE" align="right"/>
@@ -87,7 +88,12 @@
   	<Form action="CreerAnnonceCherche2.html"> 
   		<input type="submit" name="Continuer" value="Continuer"/> 
   	</Form>  
-        
+  	
+<div class="content">  	
+       <div class="band">
+       		Petites annonces de l'université de Neuchâtel
+       </div>    
+</div>    
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
