--- a/html/Base.html
+++ b/html/Base.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js">
+<link rel="stylesheet" href="BaseCss.css">
+
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
