--- a/html/annonce_miriam.html
+++ b/html/annonce_miriam.html
@@ -30,8 +30,11 @@
         
     <div>
 			<header>
-				<h1> Gestion des annonces des étudiants</h1>
+				<h1> Gestion des annonces</h1>
 			</header>
+	</div>
+	<div>
+				<h1> Bloquer </h1>
 	</div>
 
         
