--- a/html/Base.html
+++ b/html/Base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="no-js">
-<link rel="stylesheet" href="BaseCss.css">
 
     <head>
         <meta charset="utf-8">
@@ -11,8 +10,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/BaseCss.css">
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body>
