--- a/html/Base.html
+++ b/html/Base.html
@@ -36,7 +36,7 @@
 	
 	
 	
-	<div id="ImgBox" style="height:800px; width:33%;float:right;">
+	<div id="ImgBox" style="height:300px; width:33%;float:right;">
 	IMG
 	ESPACE
 	
@@ -44,10 +44,23 @@
 	
 	
 	
-	<div id="AutreAnnonce" style="position: absolute; bottom : 5px">
-	AUTRES LOL
-
-	
+	<div class="AutreAnnonce">
+	Annonces similaires
+		<div class="annoncessimilaires">
+			<article class="annoncesimilaire">
+				<img class="imgAnnonceSimilaire" width="50" height="50" src=""\>
+				<div class="textannoncesimilaire">Titre<br>Description<br>Prix</div>
+		
+			</article>
+			<article class="annoncesimilaire">
+				<img class="imgAnnonceSimilaire" width="50" height="50" src=""\>
+				<div class="textannoncesimilaire">Titre<br>Description<br>Prix</div>
+			</article>
+			<article class="annoncesimilaire">
+				<img class="imgAnnonceSimilaire" width="50" height="50" src=""\>
+				<div class="textannoncesimilaire">Titre<br>Description<br>Prix</div>
+			</article>
+		</div>
 	</div>
 	
 </div>
