--- a/html/Base.html
+++ b/html/Base.html
@@ -19,9 +19,12 @@
         
         
 <div id="Maxibox" style="width:100%">
-	
-	<div id="TopLine" style="widht:100%">
-	Titre
+
+	<div id="TopLine" class="TopLine">
+		Titre
+		<div id="TopPrix" class="TopPrix">
+			Prix
+		</div>
 	</div>
 	
 	
@@ -36,10 +39,10 @@
 	
 	
 	
-	<div id="ImgBox" style="height:300px; width:33%;float:right;">
+	<div id="ImgBox" style="height:300px; width:33%;float:right;border:1px solid black;">
 	IMG
 	ESPACE
-	
+
 	</div>
 	
 	
