--- a/html/Annonces Roxana.html
+++ b/html/Annonces Roxana.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>UniVerse: Student Exchange!</title>
-        <meta name="description" content="">
+        <meta name="author" content="Galgau Roxana">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="/G10/css/cssRoxana.css"/>
         <link rel="stylesheet" href="css/normalize.css">
