--- a/html/inscriptionTerminee.html
+++ b/html/inscriptionTerminee.html
@@ -9,7 +9,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" type="text/css" href="/G8/css/index.css"/>
+        <link rel="stylesheet" type="text/css" href="/G8/css/inscriptionTerminee.css"/>
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body>
