--- a/html/Base.html
+++ b/html/Base.html
@@ -42,7 +42,7 @@
 <div id="DivDroite">
 		
 		<div id="ImgBoxTopImg">
-			<img src="http://image.noelshack.com/fichiers/2014/14/1396471602-900.jpg" style="width:98%; height:98%; padding-bottom:1%; padding-top:1%; padding-left:1%; padding-right:1%">
+			<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-300.jpg" style="width:98%; height:98%; padding-bottom:1%; padding-top:1%; padding-left:1%; padding-right:1%">
 		</div>
 
 
@@ -57,17 +57,17 @@
 		
 		
 		<div id="ContactBox">
-			<input type="button" value="Contact" style="background-color:yellow; height:40px; width:90%; margin-left:10%; float:right;" style="color:white; font-weight:bold"onclick> 
+			<input type="button" value="Contact" style="background-color:yellow; height:40px; width:90%; margin-left:10%; float:right;margin-top:1%; margin-bottom:1%"> 
 	
 		</div>
 		<div id="EmailBox">
-			<input type="button" value="Envoyer via e-mail" style="background-color:lightgrey; height:40px; width:60%; float:right; margin-left:38%" style="color:white; font-weight:bold"onclick>
+			<input type="button" value="Envoyer via e-mail" style="background-color:lightgrey; height:40px; width:60%; float:right; margin-left:38%; margin-bottom:1%">
 		</div>
 		
 		<div id="Multilinks">
-			<input type="button" value="FB" style="background-color:blue; height:40px; width:40px; float:right">
-			<input type="button" value="Tw" style="background-color:lightblue; height:40px; width:40px; float:right">
-			<input type="button" value="Imp" style="background-color:grey; height:40px; width:40px; float:right">
+			<input type="button" value="FB" style="background-color:blue; height:40px; width:40px; float:right; margin-left:1%">
+			<input type="button" value="Tw" style="background-color:lightblue; height:40px; width:40px; float:right; margin-left:1%">
+			<input type="button" value="Imp" style="background-color:grey; height:40px; width:40px; float:right; margin-left:1%">
 			<input type="button" value="" style="background-color:yellow; height:40px; width:40px; float:right">
 			
 		</div>
