--- a/html/Base.html
+++ b/html/Base.html
@@ -30,11 +30,33 @@
 	
 	
 	<div id="Description" style="width:65%; float:left;">
-	Description <br>TOUPLEIN</br>
-	<br>LOL
-	<br>ENCORE
-	VOILA
-	BLA
+	<body>
+		<!-- contenu blabla -->
+	<h1></h1>
+		
+		
+	
+	<div style="border: 1px solid black; padding: 1px; background-color: white; -moz-border-radius-topleft: 10%; -moz-border-radius-topright: 10%; -moz-border-radius-bottomright: 5%; -moz-border-radius-bottomleft: 5%;">
+	<p>description : blabla	</p>
+	</div>
+	
+	<p>
+	
+	
+	
+	</p>
+	
+	
+		<!-- cadre information -->
+	
+	<div>Date de parution : <i>jj/mm/aaaa</i></div>
+	<div>Prix : <i>CHF__.-</i></div>
+	<div>Lieu : <i>NPA</i></div>
+	<div>Remarques : <i>divers</i></div>
+
+	
+	</body>
+
 	</div>
 	
 	
