--- a/html/CreerAnnonceOffre1.html
+++ b/html/CreerAnnonceOffre1.html
@@ -52,8 +52,8 @@
 			</select>
      <br><br> 
     	<Input type="checkbox" > Cours de soutien
-    		<ul style="list-style-type: circle"> </ul>
-    			<li>Spécifier le cours</li>
+    		<br>
+    		Spécifier le cours
     	<Input type="text" name="Nom du cours">	
     <br><br>
         <Input type="checkbox" > Logements
@@ -78,8 +78,8 @@
     		</select>
 	<br><br>
     	 <Input type="checkbox"> Notes de cours
-    		<ul style="list-style-type: circle"> </ul>
-    			<li>Spécifier le cours</li>
+    		<br>
+    		Spécifier le cours
     	<Input type="text" name="Nom du cours">
     </p>	
     </Form> 
@@ -88,22 +88,24 @@
 
 	<Form method="post">
 	<p>
-    	<Input type="checkbox" > Facultés :
+    	Faculté :
     		<select name="Cours de Langues" size="1"> 
     			<option> Lettres et Sciences Humaines </option> 
     			<option>Sciences Economiques </option> 
     			<option> Droit </option>
     			<option> Sciences </option>
     			<option> Théologie </option>
+    			<option> Toutes </option>
     		</select>
-    <br><br>
-    	<Input type="checkbox"> Toutes
     </p>
     </Form>	
-   		
-  	<Form action="CreerAnnonceCherche2.html"> 
+   	<br>
+   	<p>
+  	<Form action="404.html">
   		<input type="submit" name="Continuer" value="Continuer"/> 
   	</Form>  
+  	<br>
+  	</p>
   	
 
 	<div class="band">
