--- a/html/Base.html
+++ b/html/Base.html
@@ -96,14 +96,13 @@
 	</div>
 
 	
-	<div class="AutreAnnonce" style="position: absolute; bottom: 0;">
-Autres Annonces
-
+	<div class="AutreAnnonce">
+	Annonces similaires
 		<div class="annoncessimilaires">
 			<article class="annoncesimilaire">
 				<img class="imgAnnonceSimilaire" width="50" height="50" src=""\>
 				<div class="textannoncesimilaire">Titre<br>Description<br>Prix</div>
-		
+
 			</article>
 			<article class="annoncesimilaire">
 				<img class="imgAnnonceSimilaire" width="50" height="50" src=""\>
@@ -115,13 +114,10 @@ Autres Annonces
 			</article>
 		</div>
 	</div>
-	
-	
-	
-	
-	
-	
+
 </div>
+
+
         
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
