--- a/html/CreerAnnonceCherche.html
+++ b/html/CreerAnnonceCherche.html
@@ -38,8 +38,6 @@
     <li class="nav-item"><a href="#">Valider l'annonce</a></li>
 </ul>
 
-<br>
-    
     <h2> Choix de la catégorie :</h2>
     
 	<Form method="post"> 
@@ -99,10 +97,9 @@
     		</select>
     </p>
     </Form>	
-   	<br>
    	<p>
   	<Form action="404.html">
-  		<input type="submit" name="Continuer" value="Continuer"/> 
+  		<a href="#" class="bouton">Continuer</a>
   	</Form>  
   	<br>
   	</p> 
