--- a/html/CreerAnnonceOffre1.html
+++ b/html/CreerAnnonceOffre1.html
@@ -99,10 +99,9 @@
     		</select>
     </p>
     </Form>	
-   	<br>
    	<p>
   	<Form action="404.html">
-  		<input type="submit" name="Continuer" value="Continuer"/> 
+  		<a href="#" class="bouton">Continuer</a>
   	</Form>  
   	<br>
   	</p>
