--- a/html/CreerAnnonceType.html
+++ b/html/CreerAnnonceType.html
@@ -46,7 +46,7 @@
     		<Input type="checkbox"> Je cherche
     	<br><br>
    	<Form action="404.html">
-  		<input type="submit" name="Continuer" value="Continuer"/> 
+  		<a href="#" class="bouton">Continuer</a>
   	</Form>  
   	
 
