--- a/html/CreerAnnonceRediger.html
+++ b/html/CreerAnnonceRediger.html
@@ -103,8 +103,7 @@
     
      	<Form action="404.html">
      	
-     	<a href="#" class="bouton">Bouton</a>
-  		<input type="submit" name="Continuer" value="Continuer"/> 
+     	<a href="#" class="bouton">Continuer</a> 
   		</Form>  
 
 	<div class="band">
