--- a/html/CreerAnnonceValider.html
+++ b/html/CreerAnnonceValider.html
@@ -30,7 +30,7 @@
   		</div>     
     
 	
-<ul class="nav">
+<ul class="nav" style="width:130%; height: 100%" >
     <li class="nav-item"><a href="#">Type de l'annonce</a></li>
     <li class="nav-item"><a href="#">Catégories </a></li>
     <li class="nav-item"><a href="#">Rédiger l'annonce </a></li>
