--- a/html/Base.html
+++ b/html/Base.html
@@ -49,10 +49,24 @@
 	
 		<!-- cadre information -->
 	
-	<div>Date de parution : <i>jj/mm/aaaa</i></div>
-	<div>Prix : <i>CHF__.-</i></div>
-	<div>Lieu : <i>NPA</i></div>
-	<div>Remarques : <i>divers</i></div>
+	<table>
+	<tr>
+		<td>Date de parution :</td>
+		<td><i>jj/mm/aaaa</i></td>
+	</tr>
+	<tr>
+		<td>Prix :</td> 
+		<td><i>CHF__.-</i></td>
+	</tr>
+	<tr>
+		<td>Lieu :</td>
+		<td> <i>NPA</i></td>
+	</tr>
+	<tr>
+		<td>Remarques :</td>
+		<td><i>divers</i></td>
+	</tr>
+	</table>
 
 	
 	</body>
