--- a/html/Annonces Roxana.html
+++ b/html/Annonces Roxana.html
@@ -42,10 +42,10 @@
 	
 	   
 	<div class="list">
-        <table>
+        <table class="list">
 		<ul>Content List</ul>
-		<li type="disc">Livres</li>
-		<li type="disc">Emploi</li>
+		<li>Livres</li>
+		<li>Emploi</li>
 		</table> 
 	</div>       
         
