--- a/html/CreerAnnonceType.html
+++ b/html/CreerAnnonceType.html
@@ -38,9 +38,9 @@
 </ul>
 
 <br>
-    
+    <div class="h2">
     <h2> Type de l'annonce </h2>
-    
+    </div>
    			<Input type="checkbox"> J'offre
    		<br><br>
     		<Input type="checkbox"> Je cherche
