Changement de noms et passage en CSS

--- a/html/afficherannoncehtml.html
+++ b/html/afficherannoncehtml.html
@@ -10,7 +10,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-        <link rel="stylesheet" href="../css/AfficherAnnonceCSS.css">
+        <link rel="stylesheet" href="../css/afficherannoncecss.css">
         
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
@@ -33,7 +33,7 @@
 	<body>
 	
 	
-	<div style="border: 1px solid black; padding: 1px; background-color: white; -moz-border-radius-topleft: 10%; -moz-border-radius-topright: 10%; -moz-border-radius-bottomright: 5%; -moz-border-radius-bottomleft: 5%;">
+	<div id="DescriptionBox">
 	<p>description : blabla	</p>
 	</div>
 	
