--- a/html/Annonces Roxana.html
+++ b/html/Annonces Roxana.html
@@ -28,7 +28,7 @@
 			  
 			  		
   		<div class="logo">
-    		<img src="/G10/img/Logo-unine.png" alt="Unine Logo"/>
+    		<img src="/G10/img/img/Logo-unine.png" alt="Unine Logo"/>
         </div>
   
 	<ul class="nav">
