--- a/html/creationCompte.html
+++ b/html/creationCompte.html
@@ -14,7 +14,6 @@
     </head>
     <body>
    
-
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
@@ -24,7 +23,7 @@
 </p>
 
 <p>      
-      <table width="100%" border ="1" cellspacing="1" cellpadding="1"><tr><td><div align=left>
+      <table border ="1" cellspacing="1" cellpadding="1"><tr><td><div align=left>
 
 <p>
 	<div>	<table width="100%" border ="0" cellspacing="1" cellpadding="1"><div align=left>
