--- a/html/afficherannoncehtml.html
+++ b/html/afficherannoncehtml.html
@@ -23,13 +23,18 @@
 	<div id="TopLine" class="TopLine">
 		Titre
 		<div id="TopPrix" class="TopPrix">
-		Prix
+				<table>
+					<tr>
+					<td>Prix :</td>
+					<td><i>"  "</i></td>
+					</tr>
+				</table>
 		</div>
 	</div>
 	
 	
 	
-	<div id="Description" style="width:65%; float:left;">
+	<div id="Description" style="width:65%; float:left; margin-left:1%;">
 	<body>
 	
 	
