--- a/html/afficherannoncehtml.html
+++ b/html/afficherannoncehtml.html
@@ -34,19 +34,13 @@
 	
 	
 	
-	<div id="Description" style="width:65%; float:left; margin-left:1%;">
+	<div id="Description">
 	<body>
 	
 	
 	<div id="DescriptionBox">
-	<p>description : blabla	</p>
+	<p>description : blabla </p>
 	</div>
-	
-	<p>
-	
-	
-	
-	</p>
 	
 	
 		<!-- cadre information -->
@@ -86,7 +80,7 @@
 
 		<div id="AutresImages">
 
-				<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-300.jpg" style="float:left; width:32%; height:32%; padding-left:1%; padding-right:0.5%">
+				<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-500.jpg" style="float:left; width:32%; height:32%; padding-left:1%; padding-right:0.5%">
 				<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-300.jpg" style="float:left; width:32%; height:32%; padding-right:0.5%; padding-left:0.5%">
 				<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-300.jpg" style="float:left; width:32%; height:32%; padding-left:0.5%">
 
