fusion avec groupe G6 (login, inscription, changement de mot de passe)

--- a/html/login.html
+++ b/html/login.html
@@ -9,7 +9,7 @@
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-     	<link rel="stylesheet" href="../css/stylesheet.css">
+     	<link rel="stylesheet" href="/css/login-gestioncompte.css">
         <script src="js/vendor/modernizr-2.7.1.min.js"></script>
  
  <style type="text/css">
