--- a/html/adminAnnonces.html
+++ b/html/adminAnnonces.html
@@ -16,7 +16,14 @@
 <div id="wrapper">
   <!-- Begin Header -->
   <div id="header">
-  <img src="../img/Logo-unine.png" alt="logo"/></div>
+  	Connecté en tant que: "admin" | <a href="#">Logout</a>
+  </div>
+  <div id="header2">
+  <img src="../img/Logo-unine.png" alt="logo"/>
+  <div id="message">
+  	Bienvenu(e), Admin
+  </div>
+  </div>
   <!-- End Header -->
   <!-- Begin Navigation -->
   <div id="navigation">
@@ -68,14 +75,24 @@
   	</ul>
   	<div class="clear"></div>
   	<div id="featured">
-  		<div id="image">
-  			<img src="../img/sky.jpg" alt="sky"/>
-  		</div>
   		<div id="featured-content">
-  			<h1>Lorem Ipsum</h1>
-  			<p>
-  				Haec et huius modi quaedam innumerabilia ultrix facinorum impiorum bonorumque praemiatrix aliquotiens operatur Adrastia atque utinam semper quam vocabulo duplici etiam Nemesim appellamus: ius quoddam sublime numinis efficacis, humanarum mentium opinione lunari circulo superpositum, vel ut definiunt alii, substantialis tutela generali potentia partilibus praesidens fatis, quam theologi veteres fingentes Iustitiae filiam ex abdita quadam aeternitate tradunt omnia despectare terrena.
-  			</p>
+  			<div id="triage">Trier par : <a href="#">Nouveautés</a> / <a href="#">Date de parution</a> / <a href="#">Gratuites</a> / <a href="#">Payantes</a></div>
+  			<div id="tabannonce"><center><table width=100% height=320px border=1>
+  				<tr>
+  				<td width=20% height=33% align=center>Sélection</td>
+  				<td width=80% height=33% align=center>ANNONCE 1</td>
+  				</tr>
+  				<tr>
+  				<td width=20% height=33% align=center>Sélection</td>
+  				<td width=80% height=33% align=center>ANNONCE 2</td>
+  				</tr>
+  				<tr>
+  				<td width=20% height=34% align=center>Sélection</td>
+  				<td width=80% height=34% align=center>ANNONCE 3</td>
+  				</tr>
+  				</table></center>
+  				</div>
+  			<div id="pages"><a href="#">Page précédente</a> - <a href="#">Page Suivante</a></div>
   		</div>
   	</div>
   </div></div>
