ajout du lien pour voir les résultats de la recherche

--- a/html/GestionUser.html
+++ b/html/GestionUser.html
@@ -20,7 +20,7 @@
   		l'élément 
   				<input type="text" size="30" />
   		</p><p>	
-  	 	<input type="button" value="Rechercher" />
+  	 	<a href="ResultatRecherche.html" target="_blank"> <input type="button" value="Lancer la recherche"> </a>
 </fieldset>
 
 
