--- a/html/GestionUser.html
+++ b/html/GestionUser.html
@@ -7,9 +7,8 @@
 
 <body>
 
-<h2>Rechercher - user</h2>
-					  <p><fieldset>
-	<legend></legend>
+	<fieldset>
+	<legend> Rechercher un user</legend>
 	<p>dans
   			<select name="section">
     			<option value="volvo">XXXXX</option>
