ajout d'un bouton back

--- a/html/ResultatRecherche.html
+++ b/html/ResultatRecherche.html
@@ -58,8 +58,9 @@ div.search {
             	<td> <a href="mailto:mathieu.rerat@unine.ch"> mathieu.rerat@unine.ch </a> </td>
            </tr>
 		</table>
-    	
-        </fieldset>
+    	<p><a href="GestionUser.html" target="_blank"><input type="button" value="Back" />
+    	</a></p>
+</fieldset>
 	</div>
     </div>
 </body>
