bouton back déplacé à droite

--- a/html/ResultatRecherche.html
+++ b/html/ResultatRecherche.html
@@ -24,7 +24,8 @@ div.search {
     min-width: 175px;
  
 }
-
+div.text { float: right;
+padding-right: 5px}
 </style>
 <title>Document sans nom</title>
 </head>
@@ -57,9 +58,11 @@ div.search {
   				<td>80</td>
             	<td> <a href="mailto:mathieu.rerat@unine.ch"> mathieu.rerat@unine.ch </a> </td>
            </tr>
-		</table>
-    	<p><a href="GestionUser.html" target="_blank"><input type="button" value="Back" />
-    	</a></p>
+		</table> 
+		<br>
+		<div class = "text">
+    	<a href="GestionUser.html" target="_blank"><input type="button" value="Back">
+    	</a> </div>
 </fieldset>
 	</div>
     </div>
