--- a/html/afficherannoncehtml.html
+++ b/html/afficherannoncehtml.html
@@ -21,12 +21,12 @@
 <div id="Maxibox" >
 
 	<div id="TopLine" class="TopLine">
-		Titre
+		<b>Titre</b>
 		<div id="TopPrix" class="TopPrix">
 				<table>
 					<tr>
-					<td>Prix :</td>
-					<td><i>"  "</i></td>
+					<td><b>Prix :</b></td>
+					<td><i>"          "</i></td>
 					</tr>
 				</table>
 		</div>
@@ -40,6 +40,12 @@
 	
 	<div id="DescriptionBox">
 	<p>description : blabla </p>
+	<br>Autre ligne 
+	<br>Une nouvelle ligne
+	<br>Encore une! Eh beh!
+	<br>Pas grand chose à dire, en plus.
+	<br>C'est surtout histire de tester, voir si le texte s'aligne bien, si c'est moche, si il faut faire des modifications parce que la phrase est trop longue?
+	<br>Comme quoi, c'est pas parce qu'un texte ne veut rien dire qu'il est inutile. HTML poétique. 
 	</div>
 	
 	
@@ -82,7 +88,7 @@
 
 				<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-500.jpg" style="float:left; width:32%; height:32%; padding-left:1%; padding-right:0.5%">
 				<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-300.jpg" style="float:left; width:32%; height:32%; padding-right:0.5%; padding-left:0.5%">
-				<img src="http://image.noelshack.com/fichiers/2014/14/1396462844-300.jpg" style="float:left; width:32%; height:32%; padding-left:0.5%">
+				<img src="../img/Selle.jpg" style="float:left; width:32%; height:32%; padding-left:0.5%">
 
 		</div>
 		
@@ -100,7 +106,7 @@
 			<input type="button" value="FB" style="background-color:blue; height:40px; width:40px; float:right; margin-left:1%">
 			<input type="button" value="Tw" style="background-color:lightblue; height:40px; width:40px; float:right; margin-left:1%">
 			<input type="button" value="Imp" style="background-color:grey; height:40px; width:40px; float:right; margin-left:1%">
-			<input type="button" value="" style="background-color:yellow; height:40px; width:40px; float:right">
+			<input type="button" value="Fav" style="background-color:yellow; height:40px; width:40px; float:right">
 			
 		</div>
 	</div>
