Fusion du code G1 et G5

--- a/html/afficherAnnonce.html
+++ b/html/afficherAnnonce.html
@@ -10,9 +10,9 @@
 
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
 
-        <link rel="stylesheet" href="../css/afficherannoncecss.css">
+        <link rel="stylesheet" href="/css/afficherAnnonce.css">
         
-        <script src="js/vendor/modernizr-2.7.1.min.js"></script>
+        <script src="/js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body>
  
