--- a/html/afficherAnnonces.html
+++ b/html/afficherAnnonces.html
@@ -20,7 +20,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="Carlos Alberto">
 		<meta name="viewport" content="width=device-width; initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="/G1/css/AnnonceG1.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/afficherAnnonces.css"/>
 
 
 	</head>
@@ -43,7 +43,7 @@
         <br>
         
     	<div class="logo">
-    		<img src="/G1/img/Logo-unine.png" alt="Unine Logo"/>
+    		<img src="/img/Logo-unine.png" alt="Unine Logo"/>
     		<br>
     		<br>
     		<br>
