--- a/html/mesFavorisAnnonces.html
+++ b/html/mesFavorisAnnonces.html
@@ -31,7 +31,7 @@
         	<a href='/compte'> Accueil</a> >> <a href='/compte/favoris' >Mes Favoris</a> >> Annonces
         </div>
         
-         <a href="'/compte/annonces'">
+         <a href='/compte/annonces'>
             <div class="hyperlien1">
             	Mes annonces
             </div></a>
@@ -40,7 +40,7 @@
             Confidentialité
             </div>
             
-            <a href="'/compte/favoris'">
+            <a href='/compte/favoris'>
             <div class="hyperlien3">
             Mes Favoris
             </div>
