--- a/html/annoncesModerateur.html
+++ b/html/annoncesModerateur.html
@@ -6,7 +6,7 @@
         <title>UniVerse: Student Exchange!</title>
         <meta name="author" content="Galgau Roxana">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" type="text/css" href="/G10/css/annoncesModerateur.css"/>
+		<link rel="stylesheet" type="text/css" href="/css/annoncesModerateur.css"/>
         <link rel="stylesheet" href="/css/normalize.css">
         <link rel="stylesheet" href="/css/main.css">
         <script src="/js/vendor/modernizr-2.7.1.min.js"></script>
@@ -25,7 +25,7 @@
    		</ul>
   		</div>
 		
-		<div style="margin-right: 5%">
+		<div>
 		<td class="SortedBy"><form action=><input type="button"  value="sorted by"></form></td>     
 		<td class="LastFirst"><form action=""><select name="annonce"><option value="last post time">last post time</option>
 		<option value="first post time">first post time</option>
@@ -34,7 +34,7 @@
 		
 		
 		<div class="logo">
-    		<img src="/G10/img/Logo-unine.png" alt="Unine Logo"/>
+    		<img src="/img/Logo-unine.png" alt="Unine Logo"/>
         </div>
   
 	<ul class="nav">
@@ -56,8 +56,8 @@
 	<div class="box">
     	<table>
     		<table class="texto">
-    		<tr><td><span><b><h1 style="center:20px;">Je vends livre de Micro</h1></b></span></td>
-    			<td><img class="img-livre" src="http://idata.over-blog.com/3/47/12/05/peinture-de-livre_Livre.gif" width="450" height="350"></td>
+    		<tr><td><span><b><h1 style="center:20%;">Je vends livre de Micro</h1></b></span></td>
+    			<td style=text-align="right"><img class="img-livre" src="http://idata.over-blog.com/3/47/12/05/peinture-de-livre_Livre.gif" width="450" height="350"></td>
     		</tr> 	
 			<tr><td><p>Type:"offre"</p></td></tr>
 			<tr><td><p>Parution: 24.03.2014</p></td></tr>
