--- a/html/annoncesModerateur.html
+++ b/html/annoncesModerateur.html
@@ -54,6 +54,7 @@
     		<tr><td><span><b><h1 style="center:20px;">Je vends livre de Micro</h1></b></span></td>
     			<td><img class="img-livre" src="http://idata.over-blog.com/3/47/12/05/peinture-de-livre_Livre.gif" width="42" height="42"></td>
     		</tr> 	
+    			<tr><td><p><a href="/admin/annonce/delete?a_id=3">Effacer Annonce</a></p></td></tr>
 			<tr><td><p>Type:"offre"</p></td></tr>
 			<tr><td><p>Parution: 24.03.2014</p></td></tr>
 			<tr><td><p>Region: NeuchÂtel</p></td></tr>
