--- a/html/mesAnnonces.html
+++ b/html/mesAnnonces.html
@@ -41,9 +41,9 @@
             Confidentialité
             </div>
             
-            <div class="hyperlien3">
-            <a href='/compte/favoris'>Mes Favoris</a>
-            </div>
+            <a href='/compte/favoris'><div class="hyperlien3">
+            Mes Favoris
+            </div></a>
             
             <div class="hyperlien4">
             Mon Profil
