--- a/html/adminGestion.html
+++ b/html/adminGestion.html
@@ -73,24 +73,25 @@
   		<li class="rubriques"><a href="adminRubriques.html">Rubriques</a></li>
   		<li class="forum"><a href="adminForum.html">Forum</a></li>
   	</ul>
-  	<div class="clear"></div>
+  	<div class="clear">
+  	</div>
   	<div id="featured">
   		<div id="featured-content">
-  			<div id="triage">Trier par : <a href="#">Nouveautés</a> / <a href="#">Date de parution</a> / <a href="#">Gratuites</a> / <a href="#">Payantes</a></div>
-  			<div id="tabannonce"><center><table width=100% height=320px border=1>
+  			<div id="triage">Trier par : <a href="#">Nouveautés</a> / <a href="#">Date de parution</a> / <a href="#">Gratuites</a> / <a href="#">Payantes</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="#">Modifier</a> - <a href="#">Supprimer</a> </div>
+  			<div id="tabannonce" align="center"><table width=100% height=320px border=1>
   				<tr>
-  				<td width=20% height=33% align=center>Sélection</td>
-  				<td width=80% height=33% align=center>ANNONCE 1</td>
+  				<td width=20% height=33% align="center">Sélection</td>
+  				<td width=80% height=33% align="center">ANNONCE 1</td>
   				</tr>
   				<tr>
-  				<td width=20% height=33% align=center>Sélection</td>
-  				<td width=80% height=33% align=center>ANNONCE 2</td>
+  				<td width=20% height=33% align="center">Sélection</td>
+  				<td width=80% height=33% align="center">ANNONCE 2</td>
   				</tr>
   				<tr>
-  				<td width=20% height=34% align=center>Sélection</td>
-  				<td width=80% height=34% align=center>ANNONCE 3</td>
+  				<td width=20% height=34% align="center">Sélection</td>
+  				<td width=80% height=34% align="center">ANNONCE 3</td>
   				</tr>
-  				</table></center>
+  				</table>
   				</div>
   			<div id="pages"><a href="#">Page précédente</a> - <a href="#">Page Suivante</a></div>
   		</div>
@@ -98,7 +99,8 @@
   </div></div>
   <!-- End Right Column -->
   <!-- Begin Footer -->
-  <div id="footer"></div>
+  <div id="footer">
+  </div>
   <!-- End Footer -->
  </div>
 <!-- End Wrapper -->
