modifications noms avant merge

--- a/html/adminForum.html
+++ b/html/adminForum.html
@@ -13,20 +13,20 @@
 </head>
 <body>
 <!-- Begin Wrapper -->
-<div id="wrapper">
+<div id="wrapperAdmin">
   <!-- Begin Header -->
-  <div id="header">
+  <div id="headerAdmin">
   	Connecté en tant que: "admin" | <a href="#">Logout</a>
   </div>
-  <div id="header2">
+  <div id="headerAdmin2">
   <img src="../img/Logo-unine.png" alt="logo"/>
-  <div id="message">
+  <div id="messageAdmin">
   	Bienvenu(e), Admin
   </div>
   </div>
   <!-- End Header -->
   <!-- Begin Navigation -->
-  <div id="navigation">
+  <div id="navigationAdmin">
   <form action="" class="search-form frame inbtn rlarge">
       <input type="text" name="search" class="search-input" placeholder="Recherche ..." />
       <input class="search-btn" type="submit" value="Go" />        
@@ -34,8 +34,8 @@
   </div>
   <!-- End Navigation -->
   <!-- Begin Left Column -->
-  <div id="leftcolumn">
-  <div id="wrapper2">
+  <div id="leftcolumnAdmin">
+  <div id="wrapperAdmin2">
       <ul class="menu">
           <li class="item1"><a href="#">Nouvelles annonces <span>14</span></a>
               <ul>
@@ -64,8 +64,8 @@
   </div>
   <!-- End Left Column -->
   <!-- Begin Right Column -->
-  <div id="rightcolumn">
-  <div id="page-wrap">
+  <div id="rightcolumnAdmin">
+  <div id="page-wrapAdmin">
   	<ul id="main-nav">
   		<li class="accueil"><a href="adminGestion.html">Accueil</a></li>
   		<li class="annonces"><a href="adminAnnonces.html">Annonces</a></li>
@@ -73,13 +73,15 @@
   		<li class="rubriques"><a href="adminRubriques.html">Rubriques</a></li>
   		<li class="current"><a href="adminForum.html">Forum</a></li>
   	</ul>
-  	<div class="clear"></div>
-  	<div id="featured">
+  	<div class="clear">
+  	</div>
+  	<div id="featuredAdmin">
   	</div>
   </div></div>
   <!-- End Right Column -->
   <!-- Begin Footer -->
-  <div id="footer"></div>
+  <div id="footerAdmin">
+  </div>
   <!-- End Footer -->
  </div>
 <!-- End Wrapper -->
