--- a/html/adminGestion.html
+++ b/html/adminGestion.html
@@ -13,20 +13,20 @@
 </head>
 <body>
 <!-- Begin Wrapper -->
-<div id="wrapper">
+<div id="wrapperAdmin">
   <!-- Begin Header -->
-  <div id="header">
+  <div id="headerAdmin">
   	Connecté en tant que: "admin" | <a href="#">Logout</a>
   </div>
-  <div id="header2">
+  <div id="headerAdmin2">
   <img src="../img/Logo-unine.png" alt="logo"/>
-  <div id="message">
+  <div id="messageAdmin">
   	Bienvenu(e), Admin
   </div>
   </div>
   <!-- End Header -->
   <!-- Begin Navigation -->
-  <div id="navigation">
+  <div id="navigationAdmin">
   <form action="" class="search-form frame inbtn rlarge">
       <input type="text" name="search" class="search-input" placeholder="Recherche ..." />
       <input class="search-btn" type="submit" value="Go" />        
@@ -34,8 +34,8 @@
   </div>
   <!-- End Navigation -->
   <!-- Begin Left Column -->
-  <div id="leftcolumn">
-  <div id="wrapper2">
+  <div id="leftcolumnAdmin">
+  <div id="wrapperAdmin2">
       <ul class="menu">
           <li class="item1"><a href="#">Nouvelles annonces <span>14</span></a>
               <ul>
@@ -61,11 +61,11 @@
           </li>
       </ul>
   </div>
-  </div>  
+  </div>
   <!-- End Left Column -->
   <!-- Begin Right Column -->
-  <div id="rightcolumn">
-  <div id="page-wrap">
+  <div id="rightcolumnAdmin">
+  <div id="page-wrapAdmin">
   	<ul id="main-nav">
   		<li class="current"><a href="adminGestion.html">Accueil</a></li>
   		<li class="annonces"><a href="adminAnnonces.html">Annonces</a></li>
@@ -75,10 +75,10 @@
   	</ul>
   	<div class="clear">
   	</div>
-  	<div id="featured">
-  		<div id="featured-content">
-  			<div id="triage">Trier par : <a href="#">Nouveautés</a> / <a href="#">Date de parution</a> / <a href="#">Gratuites</a> / <a href="#">Payantes</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="#">Modifier</a> - <a href="#">Supprimer</a> </div>
-  			<div id="tabannonce" align="center"><table width=100% height=320px border=1>
+  	<div id="featuredAdmin">
+  		<div id="featured-contentAdmin">
+  			<div id="triageAnnoncesAdmin">Trier par : <a href="#">Nouveautés</a> / <a href="#">Date de parution</a> / <a href="#">Gratuites</a> / <a href="#">Payantes</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="#">Modifier</a> - <a href="#">Supprimer</a> </div>
+  			<div id="tabannonceAdmin" align="center"><table width=100% height=320px border=1>
   				<tr>
   				<td width=20% height=33% align="center">Sélection</td>
   				<td width=80% height=33% align="center">ANNONCE 1</td>
@@ -93,13 +93,13 @@
   				</tr>
   				</table>
   				</div>
-  			<div id="pages"><a href="#">Page précédente</a> - <a href="#">Page Suivante</a></div>
+  			<div id="pagesAdmin"><a href="#">Page précédente</a> - <a href="#">Page Suivante</a></div>
   		</div>
   	</div>
   </div></div>
   <!-- End Right Column -->
   <!-- Begin Footer -->
-  <div id="footer">
+  <div id="footerAdmin">
   </div>
   <!-- End Footer -->
  </div>
