--- a/html/GestionUserAdmin.html
+++ b/html/GestionUserAdmin.html
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta name="viewport" content="width=device-width" />
-<link rel="stylesheet" href="normalize.css" />
-<link rel="stylesheet" href="main.css" />
-<link rel="stylesheet" type="text/css" href="monCompteAdmin.css"/>
+<link rel="stylesheet" href="/css/normalize.css" />
+<link rel="stylesheet" href="/css/main.css" />
+<link rel="stylesheet" type="text/css" href="/css/monCompteAdmin.css"/>
 <script src="/js/vendor/modernizr-2.7.1.min.js"></script>
 </head>
 <body>
