--- a/html/monCompteAdmin.html
+++ b/html/monCompteAdmin.html
@@ -7,9 +7,9 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="normalize.css">
-        <link rel="stylesheet" href="main.css">
-        <link rel="stylesheet" type="text/css" href="monCompteAdmin.css"/>
+        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" type="text/css" href="/css/monCompteAdmin.css"/>
         <script src="/js/vendor/modernizr-2.7.1.min.js"></script>
     </head>
     <body>
