Radio au lieu de Checkbox

--- a/html/CreerAnnonce.html
+++ b/html/CreerAnnonce.html
@@ -96,20 +96,20 @@
 
 			<Form method="post">
 				<p>
-					<Input type="checkbox"> Livres <select name="Livres"
+					<Input type="radio" name="choix" value="livres"> Livres <select name="Livres"
 						size="1">
 						<option>de cours</option>
 						<option>Autres</option>
-					</select> <br> <br> <Input type="checkbox"> Cours de
+					</select> <br> <br> <Input type="radio" name="choix" value="soutien"> Cours de
 					soutien <br> Spécifier le cours <Input type="text"
 						name="Nom du cours"> <br> <br> <Input
-						type="checkbox"> Logements <select name="Logements"
+						type="radio" name="choix" value="logements"> Logements <select name="Logements"
 						size="1">
 						<option>Colocation</option>
 						<option>Appartements</option>
 						<option>Chambre individuelle</option>
 						<option>Chambre double</option>
-					</select> <br> <br> <Input type="checkbox"> Cours de
+					</select> <br> <br> <Input type="radio" name="choix" value="langue"> Cours de
 					langue <select name="Cours de Langues" size="1">
 						<option>Français</option>
 						<option>Anglais</option>
@@ -120,7 +120,7 @@
 						<option>Russe</option>
 						<option>Arabe</option>
 						<option>Hébreu</option>
-					</select> <br> <br> <Input type="checkbox"> Notes de cours
+					</select> <br> <br> <Input type="radio" name="choix" value="notes"> Notes de cours
 					<br> Spécifier le cours <Input type="text" name="Nom du cours">
 				</p>
 			</Form>
