--- a/html/rubriques.html
+++ b/html/rubriques.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<meta content="charset=utf-8" />
-		<link rel="stylesheet" type="text/css" href="messtyles(3).css">
+		<link rel="stylesheet" type="text/css" href="/css/rubriques.css">
 		<title>UniVerse</title>
 	</head>
 
 	<body>
 	<div class="centered">
 	
-	<div class="logo">  <img src="Logo-unine.png" alt="Logo" width=50%></div>
+	<div class="logo">  <img src="/img/Logo-unine.png" alt="Logo" width=50%></div>
 	
 	<div class="title">  <h1 size="4">Gestion des rubriques</h1> </div>
 
